--- a/post-2.html
+++ b/post-2.html
@@ -7,64 +7,59 @@
 <meta name="robots" content="max-image-preview:large">
 <meta name="viewport" content="width=960">
 <script>var currDev=function(){return 0}</script>
-<link rel="preload" href="css/Poppins-Bold.woff2" as="font" crossorigin>
 <link rel="preload" href="css/Poppins-Regular.woff2" as="font" crossorigin>
-<style>html,body{-webkit-text-zoom:reset !important}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Bold.woff2') format('woff2'),url('css/Poppins-Bold.woff') format('woff');font-weight:700}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Regular.woff2') format('woff2'),url('css/Poppins-Regular.woff') format('woff');font-weight:400}body>div{font-size:0}p,span,h1,h2,h3,h4,h5,h6,a,li{margin:0;word-spacing:normal;word-wrap:break-word;-ms-word-wrap:break-word;pointer-events:auto;-ms-text-size-adjust:none !important;-moz-text-size-adjust:none !important;-webkit-text-size-adjust:none !important;text-size-adjust:none !important;max-height:10000000px}sup{font-size:inherit;vertical-align:baseline;position:relative;top:-0.4em}sub{font-size:inherit;vertical-align:baseline;position:relative;top:0.4em}ul{display:block;word-spacing:normal;word-wrap:break-word;list-style-type:none;padding:0;margin:0;-moz-padding-start:0;-khtml-padding-start:0;-webkit-padding-start:0;-o-padding-start:0;-padding-start:0;-webkit-margin-before:0;-webkit-margin-after:0}li{display:block;white-space:normal}li p{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none}form{display:inline-block}a{text-decoration:inherit;color:inherit;-webkit-tap-highlight-color:rgba(0,0,0,0)}textarea{resize:none}.shm-l{float:left;clear:left}.shm-r{float:right;clear:right}.btf{display:none}.plyr{min-width:0 !important}html{font-family:sans-serif}body{font-size:0;margin:0}audio,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0;outline:0}b,strong{font-weight:700}dfn{font-style:italic}h1,h2,h3,h4,h5,h6{font-size:1em;line-height:1;margin:0}img{border:0}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=submit]{-webkit-appearance:button;cursor:pointer;box-sizing:border-box;white-space:normal}input[type=text],input[type=password],input[type=email],input[type=date],input[type=number],textarea{-webkit-appearance:none;appearance:none;box-sizing:border-box}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;box-sizing:border-box;border-color:#ddd}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}blockquote{margin-block-start:0;margin-block-end:0;margin-inline-start:0;margin-inline-end:0}:-webkit-full-screen-ancestor:not(iframe){-webkit-clip-path:initial!important}
+<style>html,body{-webkit-text-zoom:reset !important}@font-face{font-display:block;font-family:"Limelight";src:url('css/Limelight-Regular.woff2') format('woff2'),url('css/Limelight-Regular.woff') format('woff');font-weight:400}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Regular.woff2') format('woff2'),url('css/Poppins-Regular.woff') format('woff');font-weight:400}body>div{font-size:0}p,span,h1,h2,h3,h4,h5,h6,a,li{margin:0;word-spacing:normal;word-wrap:break-word;-ms-word-wrap:break-word;pointer-events:auto;-ms-text-size-adjust:none !important;-moz-text-size-adjust:none !important;-webkit-text-size-adjust:none !important;text-size-adjust:none !important;max-height:10000000px}sup{font-size:inherit;vertical-align:baseline;position:relative;top:-0.4em}sub{font-size:inherit;vertical-align:baseline;position:relative;top:0.4em}ul{display:block;word-spacing:normal;word-wrap:break-word;list-style-type:none;padding:0;margin:0;-moz-padding-start:0;-khtml-padding-start:0;-webkit-padding-start:0;-o-padding-start:0;-padding-start:0;-webkit-margin-before:0;-webkit-margin-after:0}li{display:block;white-space:normal}li p{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none}form{display:inline-block}a{text-decoration:inherit;color:inherit;-webkit-tap-highlight-color:rgba(0,0,0,0)}textarea{resize:none}.shm-l{float:left;clear:left}.shm-r{float:right;clear:right}.btf{display:none}.plyr{min-width:0 !important}html{font-family:sans-serif}body{font-size:0;margin:0}audio,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0;outline:0}b,strong{font-weight:700}dfn{font-style:italic}h1,h2,h3,h4,h5,h6{font-size:1em;line-height:1;margin:0}img{border:0}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=submit]{-webkit-appearance:button;cursor:pointer;box-sizing:border-box;white-space:normal}input[type=text],input[type=password],input[type=email],input[type=date],input[type=number],textarea{-webkit-appearance:none;appearance:none;box-sizing:border-box}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;box-sizing:border-box;border-color:#ddd}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}blockquote{margin-block-start:0;margin-block-end:0;margin-inline-start:0;margin-inline-end:0}:-webkit-full-screen-ancestor:not(iframe){-webkit-clip-path:initial!important}
 html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu-content{cursor:pointer;position:relative}li{-webkit-tap-highlight-color:rgba(0,0,0,0)}
-#b{background-color:#fff}.v20{display:inline-block;vertical-align:top}.ps54{position:relative;margin-top:0}.s66{width:100%;min-width:960px;min-height:73px}.c88{z-index:1;pointer-events:none}.c89{z-index:2;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#f4f4f4;background-clip:padding-box}.ps55{position:relative;margin-top:8px}.v21{display:block;vertical-align:top}.s67{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:58px}.v22{display:inline-block;vertical-align:top;overflow:visible}.ps56{position:relative;margin-left:10px;margin-top:0}.s68{min-width:710px;width:710px;min-height:58px;height:58px}.c90{z-index:3;pointer-events:auto}.ps57{position:relative;margin-left:0;margin-top:0}.m6{padding:0px 0px 0px 0px}.ml6{outline:0}.s69{min-width:236px;width:236px;min-height:58px;height:58px}.mcv6{display:inline-block}.s70{min-width:236px;width:236px;min-height:58px}.c91{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps58{position:relative;margin-left:0;margin-top:1px}.s71{min-width:236px;width:236px;min-height:55px}.c92{pointer-events:auto;overflow:hidden;height:55px}.p12{text-indent:0;padding-bottom:0;padding-right:0;text-align:center}.f21{font-family:Poppins;font-size:27px;font-size:calc(27px * var(--f));line-height:1.816;font-weight:700;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps59{position:relative;margin-left:1px;margin-top:0}.c93{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.c94{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps60{position:relative;margin-top:12px}.s72{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:276px}.s73{min-width:940px;width:940px;min-height:47px}.s74{min-width:720px;width:720px;min-height:47px}.c96{z-index:4;pointer-events:auto;overflow:hidden;height:47px}.p13{text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f22{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps61{position:relative;margin-left:116px;margin-top:0}.s75{min-width:104px;width:104px;min-height:41px}.c97{z-index:5;pointer-events:auto;overflow:hidden;height:41px}.f23{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.s76{min-width:940px;width:940px;min-height:229px}.s77{min-width:220px;width:220px;min-height:229px;height:229px}.c98{pointer-events:auto}.i9{position:absolute;left:0;width:220px;height:229px;top:0}.i10{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps62{position:relative;margin-left:20px;margin-top:0}.s78{min-width:700px;width:700px;min-height:229px}.c99{pointer-events:auto;overflow:hidden;height:229px}.f24{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:2.279;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.c100{display:inline-block;position:relative;margin-left:0;margin-top:0}@media (prefers-color-scheme: dark) {#b{background-color:#000}.c89{background-color:#14222a}.f21{color:#fffefe}.f22{color:#fffefe}.f23{color:#fffefe}.f24{color:#fffefe}}</style>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.787d0a.css" media="print">
+#b{background-color:#fff}.v22{display:inline-block;vertical-align:top}.ps60{position:relative;margin-top:0}.s79{width:100%;min-width:960px;min-height:74px}.c97{z-index:1;pointer-events:none}.s80{width:100%;min-width:960px;min-height:73px}.c98{z-index:2;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#90b94d;background-clip:padding-box}.ps61{position:relative;margin-top:-65px}.v23{display:block;vertical-align:top}.s81{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:66px}.v24{display:inline-block;vertical-align:top;overflow:visible}.ps62{position:relative;margin-left:10px;margin-top:0}.s82{min-width:473px;width:473px;min-height:66px;height:66px}.c99{z-index:3;pointer-events:auto}.ps63{position:relative;margin-left:0;margin-top:0}.m6{padding:0px 0px 0px 0px}.ml6{outline:0}.s83{min-width:236px;width:236px;min-height:66px;height:66px}.mcv6{display:inline-block}.s84{min-width:236px;width:236px;min-height:66px}.c100{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.c101{pointer-events:auto;overflow:hidden;height:66px}.p12{text-indent:0;padding-bottom:0;padding-right:0;text-align:center}.f28{font-family:Limelight;font-size:44px;font-size:calc(44px * var(--f));line-height:1.342;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#9b1e23;background-color:initial;text-shadow:none}.ps64{position:relative;margin-left:1px;margin-top:0}.c102{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps65{position:relative;margin-top:11px}.s85{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:276px}.s86{min-width:940px;width:940px;min-height:47px}.s87{min-width:720px;width:720px;min-height:47px}.c104{z-index:4;pointer-events:auto;overflow:hidden;height:47px}.p13{text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f29{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps66{position:relative;margin-left:116px;margin-top:0}.s88{min-width:104px;width:104px;min-height:41px}.c105{z-index:5;pointer-events:auto;overflow:hidden;height:41px}.f30{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.s89{min-width:940px;width:940px;min-height:229px}.s90{min-width:220px;width:220px;min-height:229px;height:229px}.c106{pointer-events:auto}.i11{position:absolute;left:0;width:220px;height:229px;top:0}.i12{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps67{position:relative;margin-left:20px;margin-top:0}.s91{min-width:700px;width:700px;min-height:229px}.c107{pointer-events:auto;overflow:hidden;height:229px}.f31{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:2.279;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.c108{display:inline-block;position:relative;margin-left:0;margin-top:0}@media (prefers-color-scheme: dark) {#b{background-color:#000}.c98{background-color:#384850}.f28{color:#677a85}.f29{color:#fffefe}.f30{color:#fffefe}.f31{color:#fffefe}}</style>
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.f7aecd.css" media="print">
 </head>
 <body id="b">
-<div class="v20 ps54 s66 c88">
-<div class="v20 ps54 s66 c89">
-<div class="ps55 v21 s67">
-<div class="v22 ps56 s68 c90">
-<ul class="menu-dropdown v20 ps57 s68 m6" id="m1">
-<li class="v20 ps57 s69 mit6">
-<a href="./" class="ml6"><div class="menu-content mcv6"><div class="v20 ps57 s70 c91"><div class="v20 ps58 s71 c92"><p class="p12 f21">Home</p></div></div></div></a>
+<div class="v22 ps60 s79 c97">
+<div class="v22 ps60 s80 c98"></div>
+<div class="ps61 v23 s81">
+<div class="v24 ps62 s82 c99">
+<ul class="menu-dropdown v22 ps63 s82 m6" id="m1">
+<li class="v22 ps63 s83 mit6">
+<a href="./" class="ml6"><div class="menu-content mcv6"><div class="v22 ps63 s84 c100"><div class="v22 ps63 s84 c101"><p class="p12 f28">Home</p></div></div></div></a>
 </li>
-<li class="v20 ps59 s69 mit6">
-<a href="page-1.html" class="ml6"><div class="menu-content mcv6"><div class="v20 ps57 s70 c93"><div class="v20 ps58 s71 c92"><p class="p12 f21">Page 1</p></div></div></div></a>
-</li>
-<li class="v20 ps59 s69 mit6">
-<a href="blog-index.php" class="ml6"><div class="menu-content mcv6"><div class="v20 ps57 s70 c94"><div class="v20 ps58 s71 c92"><p class="p12 f21">Blog</p></div></div></div></a>
+<li class="v22 ps64 s83 mit6">
+<a href="blog-index.php" class="ml6"><div class="menu-content mcv6"><div class="v22 ps63 s84 c102"><div class="v22 ps63 s84 c101"><p class="p12 f28">Blog</p></div></div></div></a>
 </li>
 </ul>
 </div>
 </div>
 </div>
+<div class="ps65 v23 s85">
+<div class="v22 ps62 s86 c103">
+<div class="v22 ps63 s87 c104">
+<h1 class="p13"><span class="f29"><a href="#">Post 2</a></span></h1>
 </div>
-<div class="ps60 v21 s72">
-<div class="v20 ps56 s73 c95">
-<div class="v20 ps57 s74 c96">
-<h1 class="p13"><span class="f22"><a href="#">Post 2</a></span></h1>
-</div>
-<div class="v20 ps61 s75 c97">
-<h2 class="p13 f23">03/10/2022</h2>
+<div class="v22 ps66 s88 c105">
+<h2 class="p13 f30">03/10/2022</h2>
 </div>
 </div>
-<div class="v20 ps56 s76 c95">
-<div class="v20 ps57 s77 c98">
-<picture class="i10">
-<source srcset="images/placeholder-220.webp 1x, images/placeholder-440.webp 2x" type="image/webp">
-<source srcset="images/placeholder-220.png 1x, images/placeholder-440.png 2x">
-<img src="images/placeholder-440.png" class="un11 i9">
+<div class="v22 ps62 s89 c103">
+<div class="v22 ps63 s90 c106">
+<picture class="i12">
+<source srcset="images/placeholder-220-1.webp 1x, images/placeholder-440-1.webp 2x" type="image/webp">
+<source srcset="images/placeholder-220-1.png 1x, images/placeholder-440-1.png 2x">
+<img src="images/placeholder-440-1.png" class="un14 i11">
 </picture>
 </div>
-<div class="v20 ps62 s78 c99">
-<p class="p13 f24">Hello,</p>
-<p class="p13 f24">this is a new blog post (no. 2).</p>
-<p class="p13 f24"><br></p>
-<p class="p13 f24"><br></p>
-<p class="p13 f24">tralala</p>
+<div class="v22 ps67 s91 c107">
+<p class="p13 f31">Hello,</p>
+<p class="p13 f31">this is a new blog post (no. 2).</p>
+<p class="p13 f31"><br></p>
+<p class="p13 f31"><br></p>
+<p class="p13 f31">tralala</p>
 </div>
 </div>
 </div>
-<div class="c100">
+<div class="c108">
 </div>
 <script>var p=document.createElement("P");p.innerHTML="&nbsp;",p.style.cssText="position:fixed;visible:hidden;font-size:100px;zoom:1",document.body.appendChild(p);var rsz=function(e){return function(){var r=Math.trunc(1e3/parseFloat(window.getComputedStyle(e).getPropertyValue("font-size")))/10,t=document.body;r!=t.style.getPropertyValue("--f")&&t.style.setProperty("--f",r)}}(p);if("ResizeObserver"in window){var ro=new ResizeObserver(rsz);ro.observe(p)}else if("requestAnimationFrame"in window){var raf=function(){rsz(),requestAnimationFrame(raf)};requestAnimationFrame(raf)}else setInterval(rsz,100);</script>
 
-<script>dpth="/";!function(){for(var e=["js/jquery.230098.js","js/jqueryui.230098.js","js/menu.230098.js","js/menu-dropdown-animations.230098.js","js/menu-dropdown.787d0a.js","js/post-2.787d0a.js"],n={},s=-1,t=function(t){var o=new XMLHttpRequest;o.open("GET",e[t],!0),o.onload=function(){for(n[t]=o.responseText;s<6&&void 0!==n[s+1];){s++;var e=document.createElement("script");e.textContent=n[s],document.body.appendChild(e)}},o.send()},o=0;o<6;o++)t(o)}();
+<script>dpth="/";!function(){for(var e=["js/jquery.230098.js","js/jqueryui.230098.js","js/menu.230098.js","js/menu-dropdown-animations.230098.js","js/menu-dropdown.f7aecd.js","js/post-2.f7aecd.js"],n={},s=-1,t=function(t){var o=new XMLHttpRequest;o.open("GET",e[t],!0),o.onload=function(){for(n[t]=o.responseText;s<6&&void 0!==n[s+1];){s++;var e=document.createElement("script");e.textContent=n[s],document.body.appendChild(e)}},o.send()},o=0;o<6;o++)t(o)}();
 </script>
 </body>
 </html>
