--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 <div class="ps4 v2 s9">
 <div class="v3 ps7 s10 c10">
 <div class="v3 ps7 s11 c11">
-<lottie-player id="lp1" class="plx lt1" data-plx="v:0:1:1:0:1.00" background="transparent">
+<lottie-player id="lp1" class="plx lt1" data-plx="v:0:1:1:0:1.00" background="black">
 </lottie-player>
 </div>
 <div class="v3 ps10 s12 c12">
@@ -53,7 +53,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </div>
 <div class="ps11 v2 s13">
 <div class="v3 ps7 s14 c13">
-<lottie-player src="images/Xmas.2213b6.json" speed="1" loop autoplay background="transparent" class="lt2">
+<lottie-player src="images/Xmas.2213b6.json" speed="1" loop autoplay background="red" class="lt2">
 </lottie-player>
 </div>
 <div class="v1 ps1 s1 c1">
