--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </div>
 <div class="ps11 v2 s13">
 <div class="v3 ps7 s14 c13">
-<lottie-player src="images/Xmas.2213b6.json" speed="1" loop autoplay background="red" class="lt2">
-</lottie-player>
+<lottie-interactive src="images/Xmas.2213b6.json" interaction="click" background="transparent" class="lt2">
+</lottie-interactive>
 </div>
 <div class="v1 ps1 s1 c1">
 <p class="p1 f1">Bienvenue sur ce site&nbsp;</p>
