--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </lottie-player>
 </div>
 <div class="v3 ps10 s13 c13">
-<p class="p2 f3">Bienvenue sur ce site&nbsp;</p>
+<p class="p2 f3">Bienvenue sur ce kut&nbsp;</p>
 </div>
 </div>
 </div>
