--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </lottie-player>
 </div>
 <div class="v1 ps1 s1 c1">
-<p class="p1 f1">Bienvenue sur ce site Z&nbsp;</p>
+<p class="p1 f1">Bienvenue sur ce site YY &nbsp;</p>
 </div>
 </div>
 <div class="btf c2">
