--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </lottie-player>
 </div>
 <div class="v3 ps10 s13 c13">
-<p class="p2 f3">Bienvenue sur ce site&nbsp;</p>
+<p class="p2 f3">Bienvenue sur ce site XX &nbsp;</p>
 </div>
 </div>
 </div>
@@ -60,7 +60,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </lottie-player>
 </div>
 <div class="v1 ps1 s1 c1">
-<p class="p1 f1">Bienvenue sur ce site ZZ &nbsp;</p>
+<p class="p1 f1">Bienvenue sur ce site WW &nbsp;</p>
 </div>
 </div>
 <div class="btf c2">
