--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@ var init_parallax;!function(){var t,e,i,r,o,l,s,n,a,f,d,h=["sticky","-webkit-sti
 
 </script>
 
-<script>console.log(document.getElementById("toto").innerHTML)</script>
+<script>console.log(document.getElementById("toto").innerText)</script>
 </body>
 </html>
