--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}#b{ba
 
 <div class="ps1 v1 s1">
 <div class="v2 ps2 s2 c1">
-<p class="p1 f1">tralala</p>
+<p class="p1 f1">trololo</p>
 </div>
 </div>
 <div class="c2">
