--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </div>
 </div>
 
-<script src="sketch_2D_trees.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+<script src="js/sketch_2D_trees.js"></script>
 
 <div class="c6">
 </div>
