--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 </div>
 </div>
 
-<script src="js/sketch_2D_trees.js"></script>
+<script src="./js/sketch_2D_trees.js"></script>
 
 <div class="c6">
 </div>
